2007-05-18 Ævar Arnfjörð Bjarmason <avar@cpan.org> (0.06)

	* Plan9.pm: Fixed typo in POD (spotted by wolverian)
	* Plan9.xs: Plugged match memory leak
	* Plan9.xs: const on Plan9_exec & Plan9_dupe prototypes
	* t/00-compile.t: Test that the object isa Regexp
	* t/re_tests: Uncommented a lot more tests, now running (approx)
	              everything it can
	* TODO: Removed
	
2007-05-18 Ævar Arnfjörð Bjarmason <avar@cpan.org> (0.05)

	* t/capture.t: A test here was actually testing for broken behavior
	* Plan.xs: split // now works after a discussion with The Bear
	* Plan.pm: No more BUGS section
	
2007-05-18 Ævar Arnfjörð Bjarmason <avar@cpan.org> (0.04)

	* Plan9.xs: s/// now works, split // still doesn't
	* Plan9.xs: Thread support, untested but should work
	* t/s.t: plan 5 tests, not 4
	* t/pathological.t: Test for speed on pathological regexes
	* t/re_tests, t/regexp.t: Regexp tests from perl core, commented
	                          out those that don't apply
	* t/subst.t: limited tests for s/// from core
	* t/subst-loop.t: Failing test for subst loop
	* t/s.t: 5 more tests for s/// added during debugging
	* t/capture.t: More tests for captures
	* t/split.t: Failing test for split behavior
	* t/subexp.t: Test for the maximum number of subexpressions

2007-03-23 Ævar Arnfjörð Bjarmason <avar@cpan.org> (0.03)

	* Plan9.pm: Re-added the bug section
	* Plan9.xs: Use Zero() instead of memset()
	* t/capture: Added failing /g capture tests
	* t/s.t: Added failing s///ge test using captures

2007-03-23 Ævar Arnfjörð Bjarmason <avar@cpan.org> (0.02)

	* Plan9.xs: Make s/// work
	* Plan9.xs: Correctly report regcomp errors
	* Plan9.xs: Map /s and /x to regcompnl and regcomplit
	* Plan9.pm: Updated docs to match code changes
	* Plan9.pm: Including the Plan9 Lucent license notice
	* t/s.t: More s/// tests
	* Makefile.PL: Fixes to build the Plan 9 libs by Rafael Kitover
	* Makefile.PL: Document dependency on XSLoader
