@@ -1,3 +1,11 @@
+2007-05-19 Ævar Arnfjörð Bjarmason <avar@cpan.org> (0.07)
+
+	* t/import.t: New test added while trying to write import/unimport
+	              in XS which turned out to be too more trouble than it
+	              was worth
+	* t/unimport.t: ditto
+	* MANIFEST.SKIP: added the TODO file
+
 2007-05-18 Ævar Arnfjörð Bjarmason <avar@cpan.org> (0.06)
 
 	* Plan9.pm: Fixed typo in POD (spotted by wolverian)
